scrollbar and fixed positioning

--- a/new-style.css
+++ b/new-style.css
@@ -3,18 +3,21 @@
             --background-color: #f5f5f5;
             --content-background: #d4b59a;
             --text-color: #808080;
-            --link-hover: #BD9879;
-            --title:#BD9879;
+            --link-hover: #d8899f;
+            --title:#d8899f;
 
             --body-font: "Montserrat";
             --font-size: 5vw;
-            --bubble-background: #e5cfbc;
+            --bubble-background: #e2ddcf;
+            --old-title:#BD9879;
 
             /* fun colors */
             --light-blue: #8fc0bd;
             --parchment: #e7e4db;
             --dark-pink: #d8899f;
             --yellow: #dcdd80;
+            --lighter-pink: #e6b9c5;
+            --darker-pink: #c56882;
 
 
 
@@ -28,6 +31,7 @@
             letter-spacing: 0.04em;
             color: var(--text-color);
             overflow: scroll;
+            overflow-x: hidden;
 
         }
         
@@ -99,26 +103,26 @@
         .header {
             text-align:center;
             letter-spacing:1px;
-            color: #FFF;
+            color: var(--text-color);
             font-size: 2vw;
-            margin-left: 10vw;
+            text-align: center;
             margin-top: 5vw;
-            padding-top: 3vw;
-            padding-bottom: 3vw;
-            padding-left: 3vw;
-            padding-right: 3vw;
-            border-radius: 50vw;
-            background-color: var(--bubble-background);
+            font-weight: bold;
+        }
+        body::-webkit-scrollbar {
+            width: 10px;
+        }
+        
+        body::-webkit-scrollbar-track {
+            background-color: #e2ddcf;
+            border-radius: 100px;
+        }
+         
+        body::-webkit-scrollbar-thumb {
+            background-color:  var(--dark-pink);
+            border-radius: 100px;
         }
 
-        .button {
-            background-color: #FFF;
-            border: none;
-            color: black;
-            padding: 15px 32px;
-            
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-top: 50vw
+        body::-webkit-scrollbar-thumb:hover {
+            background-color: var(--darker-pink);
         }
